<resources>
    <!-- General -->
    <string name="app_name">Navigation</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="drawer_header_image">Profile Picture</string>
    <string name="drawer_header_name">Felix Aditya</string>
    <string name="drawer_header_email">wojiaofelix@gmail.com</string>

    <string name="drawer_find_location">Find Location</string>
    <string name="drawer_calibrate">Calibrate</string>
    <string name="drawer_how_to_use">How to Use</string>
    <string name="drawer_log_out">Log Out</string>

    <!-- Find Location -->
    <string name="find_loc_title">Find Location</string>

    <string name="find_loc_caption_select">Select your current location</string>
    <string name="find_loc_caption_enter">Enter your current location</string>
    <string name="find_loc_caption_bottom">Did not find your current location?</string>

    <string name="find_loc_button_confirm">Confirm</string>
    <string name="find_loc_button_enter">Enter location manually</string>
    <string name="find_loc_button_scan">Scan nearby locations</string>

    <string name="find_loc_empty">Plaza Marina</string>

    <!-- Navigation Map -->
    <string name="nav_image">Navigation Map</string>
</resources>