<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlacesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appColorWhite"
        android:gravity="top|center"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/find_loc_caption_enter"
            android:textColor="@color/appColorDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <SearchView
            android:id="@+id/fragment_places_manual_search_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_find_location" />

        <!-- Confirm Button -->
        <Button
            android:id="@+id/fragment_places_manual_button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_primary"
            android:fontFamily="sans-serif"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:text="@string/find_loc_button_confirm"
            android:textAllCaps="false"
            android:textColor="@color/appColorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/fragment_places_manual_button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_secondary"
                android:fontFamily="sans-serif"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/find_loc_button_scan"
                android:textAllCaps="false"
                android:textColor="@color/appColorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>